--- a/BootStrap/BootstrapHarikaPage.html
+++ b/BootStrap/BootstrapHarikaPage.html
@@ -1,41 +1,42 @@
 <html>
     <head>
         <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-        <!-- Optional theme -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-        <!-- Latest compiled and minified JavaScript -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
         <title>Bootstrap Harika's Page</title>
     </head>
     
     <body>
         <div class="container">
-        <center>
+            <center>
                 <h1>Harika Gummadi</h1>
                 <hr/>
-        </center>
-        <p>
-            <center>
-            <h2>Welcome to Harika's Bootstrap Page</h2> 
+                <h2>Welcome to Harika's Bootstrap Page</h2>
             </center>
-            <h3>About myself</h3>
-            I am a Java Developer. I have been working in Java for few years.
-            Now I am learning Full Stack Web Development.
-        </p>
-        <img src="java_logo.jpg" alt="This is Java logo">
-        <span>
-            <h3>Trainings</h3>
-            I am undergoing training in Full Stack Web Development using HTML5, CSS3, Bootstrap, 
-            Angular, MongoDB, Express JS, NodeJS and JIRA.
-            <br/>
-            I wish this training helps in enhancing my career growth.
-        </span>
-        <br/>
-        <h4>Training Link</h4>
-        <a href="https://app.gotomeeting.com/?meetingId=669801941" target="_blank">Training</a>
+            <div class="btn-group">
+                <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#about">About Myself</button>
+                <div id="about" class="collapse">
+                    I am a Java Developer. I have been working in Java for few years.
+                    Now I am learning Full Stack Web Development.
+                </div>
+                <button type="button"class="btn btn-primary" data-toggle="collapse" data-target="#logo">Logo</button>
+                <div id="logo" class="collapse">
+                    <img src="java_logo.jpg" alt="This is Java logo" class="img-responsive">
+                </div>
+                <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#training">Trainings</button>
+                <div id="training" class="collapse">
+                    I am undergoing training in Full Stack Web Development using HTML5, CSS3, Bootstrap, 
+                    Angular, MongoDB, Express JS, NodeJS and JIRA.
+                    <br/>
+                    I wish this training helps in enhancing my career growth.
+                </div>
+                <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#trainingLink">Training Link</button>
+                <div id="trainingLink" class="collapse">
+                    <a href="https://app.gotomeeting.com/?meetingId=669801941" target="_blank">Training</a>   
+                </div>
+            </div>
         </div>
     </body>
 </html>
